<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_full"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="@color/colorbg"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/textView4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_th"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/th"
                android:text="TH" />

            <Button
                android:id="@+id/btn_en"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/en"
                android:text="EN" />
        </LinearLayout>

    </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.good.maxky_2208.pro_tree_aaa.Login.Login">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_user"
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/iphone_edittext_into_android"
                        android:ems="10"
                        android:hint="@string/enterusername"
                        android:inputType="textPersonName"
                        android:paddingLeft="8dp" />

                    <EditText
                        android:id="@+id/et_pass"
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/iphone_edittext_into_android"
                        android:ems="10"
                        android:hint="@string/enterpassword"
                        android:inputType="textPassword"
                        android:paddingLeft="8dp" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/showpass" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="165dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="10dp"

                        android:background="@drawable/buttonloging"
                        android:text="@string/login"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_loginfb"
                        style="@style/com_facebook_button"
                        android:layout_width="165dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/login_facebook"
                        android:background="@drawable/buttonloginface"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="165dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/buttonsigup"
                        android:text="@string/register"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/unuser"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/unuser"
                        android:textAlignment="center"
                        android:textColor="@color/colorbk"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
