<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.good.maxky_2208.pro_tree_aaa.Manu.Scan.DecoderActivity">
android.view.SurfaceView

    <com.dlazaro66.qrcodereaderview.QRCodeReaderView
        android:id="@+id/qrdecoderview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/switch2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10" />

    <com.good.maxky_2208.pro_tree_aaa.Manu.Scan.PointsOverlayView
        android:id="@+id/points_overlay_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/sendto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/points_overlay_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:background="@color/colorbg"
        android:text="@string/sendto" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorbg"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="#000000"
        android:textSize="14sp"
        android:text="@string/san_qr_code"
        android:id="@+id/textView10" />


    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="#00ffffff"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:paddingBottom="5dp"
        android:paddingLeft="60dp"
        android:paddingRight="50dp"
        android:paddingTop="5dp"
        android:text="@string/on_off_flashlight"
        android:textColor="@color/colorbk" />



</RelativeLayout>
